# limbs3d

./: .gitignore  LICENSE  README.md  README_jp.md  pyproject.toml  requirements.txt
examples/: 1.measure_perimeter_and_volume.ipynb
examples/data/: sample.ply
limbs3d/: __init__.py  icp.py  leg.py  utils.py  volume.py
