[tool.poetry]
name = "limbs3d"
version = "0.1.0"
description = ""
authors = ["fuji3to4 <sfujii@bio.kyutech.ac.jp>"]
packages =[
{include = "limbs3d"}
]

[tool.poetry.dependencies]
python = "^3.10"
open3d = "0.17.0"
jupyter = "^1.0.0"
lsq-ellipse = "^2.2.1"
pyvista = "^0.38.1"
pymeshfix = "^0.16.2"
pythreejs = "^2.4.1"
scikit-learn = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
