[tool.poetry]
name = "limb3d"
version = "0.2.0"
description = ""
authors = ["fuji3to4 <sfujii@bio.kyutech.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
open3d = "^0.19.0"
jupyter = "^1.1.1"
lsq-ellipse = "^2.2.1"
pyvista = "^0.46.4"
pymeshfix = "^0.17.2"
pythreejs = "^2.4.2"
scikit-learn = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
