[project]
name = "limbs3d"
version = "0.2.0"
description = ""
authors = [{ name = "fuji3to4", email = "sfujii@bio.kyutech.ac.jp" }]
requires-python = ">=3.11,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "open3d>=0.19.0,<0.20",
    "jupyter>=1.1.1,<2",
    "lsq-ellipse>=2.2.1,<3",
    "pyvista>=0.46.4,<0.47",
    "pymeshfix>=0.17.2,<0.18",
    "pythreejs>=2.4.2,<3",
    "scikit-learn>=1.8.0,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["limbs3d"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
